--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "workshop_07"}]
 
 [tool.poetry.dependencies]
 python = "3.11.5"
+pandas = "^2.1.1"
+openpyxl = "^3.1.2"
 
 
 [build-system]
