--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Install dependencies with poetry
-        run: poetry install
+        run: poetry install --dev
 
       - name: Run pytest
         run: poetry run pytest -v
