--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "consolidador de ETL"
 authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{ include = "workshop_07" }]
+
 
 [tool.poetry.dependencies]
 python = "3.11.5"
