--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,26 @@ python = "3.11.5"
 pandas = "^2.1.1"
 openpyxl = "^3.1.2"
 pytest = "^7.4.2"
+mkdocs = "^1.5.3"
+mkdocstrings-python = "^1.7.2"
+pygments = "^2.16.1"
+mkdocs-material = "^9.4.4"
+pymdown-extensions = "^10.3"
+taskipy = "^1.12.0"
+mkdocstrings = "^0.23.0"
+flake8 = "^6.1.0"
 
+
+[tool.poetry.group.dev.dependencies]
+mkdocs = "^1.5.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.taskipy.tasks]
+
+format = "poetry run black . && poetry run isort ."
+kill = "kill -9 $(lsof -t -i :8000)"
+serve = "poetry run mkdocs serve"
+test = "poetry run pytest -v"
